# cadavre-logicielle-player

./: .gitignore  Makefile  README.md  cadavre-logicielle-player.cabal  config.js  main.js  package.json
.github/workflows/: pack-linux.yml  pack-mac.yml  pack-windows.yml
app/: Main.hs
app/Editor/: Act.hs  Backend.hs  CommandLine.hs  Frontend.hs  Parse.hs  Setup.hs  Types.hs  UI.hs
static/: cadavre-logicielle.html  cadavre-logicielle.js  config.js  tidal.html  tidal.js  tidalConfig.js
static/codemirror/: codemirror.css
static/css/: cadavre-logicielle.css  tidal.css  tomorrow-night-eighties.css
